# lab-compiler-frontend

./: CMakeLists.txt  README.md
include/grammar/: GrammarProduction.h  GrammarProductionTable.h  GrammarSymbol.h
include/inter/: Constant.h  Expression.h  Identifier.h  Node.h  Operand.h  Operator.h  Quaternion.h  Storage.h  Temp.h  Variable.h
include/lexer/: Lexer.h
include/parser/: Parser.h  ParserAction.h  ParserActionType.h  ParserTable.h
include/symbol/: Symbol.h  SymbolLocation.h  SymbolName.h  SymbolType.h  SymbolValue.h  Token.h  TokenTable.h
include/util/: StateMachine.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/LexerDemo/: CMakeLists.txt  LexerDemo.cpp
src/app/ParserDemo/: CMakeLists.txt  ParserDemo.cpp
src/app/SemanticDemo/: CMakeLists.txt  SemanticDemo.cpp
src/grammar/: CMakeLists.txt  GrammarProduction.cpp  GrammarProductionTable.cpp  GrammarSymbol.cpp
src/inter/: CMakeLists.txt  Constant.cpp  Expression.cpp  Identifier.cpp  Node.cpp  Operand.cpp  Operator.cpp  Quaternion.cpp  Storage.cpp  Temp.cpp  Variable.cpp
src/lexer/: CMakeLists.txt  Lexer.cpp
src/parser/: CMakeLists.txt  Parser.cpp  ParserTable.cpp
src/symbol/: CMakeLists.txt  Symbol.cpp  SymbolLocation.cpp  Token.cpp  TokenTable.cpp
src/util/: CMakeLists.txt  StateMachine.cpp
tests/: expr.txt  in.txt
